[gd_scene load_steps=3 format=3 uid="uid://c2a5c1vvpan58"]

[ext_resource type="Script" path="res://scenes/RewardScene.gd" id="1_sfmy3"]
[ext_resource type="Texture2D" uid="uid://cfl1xtx1uttvn" path="res://assets/Images/backgrounds/RewardsBackground.png" id="2_ytqvo"]

[node name="RewardScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sfmy3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.568627, 0.501961, 0.501961, 1)
position = Vector2(568, 304)
scale = Vector2(0.755, 0.755)
texture = ExtResource("2_ytqvo")

[node name="RewardLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 48.0
offset_bottom = 55.0

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 335.0
offset_bottom = 63.0
text = "Continue"

[node name="NextFloorButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 80.0
offset_right = 345.0
offset_bottom = 111.0
text = "Next Floor"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 298.0
offset_bottom = 159.0
text = "Quit"

[node name="EquipmentButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 80.0
offset_right = 541.0
offset_bottom = 111.0
text = "Equipment"

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 32.0
offset_right = 531.0
offset_bottom = 63.0
text = "Inventory"
